Add mock navigation
